--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "live-server": "live-server public/",
-    "webpackEngine": "webpack",
-    "dev-server": "webpack-dev-server"
+    "serve": "live-server public/",
+    "build": "webpack",
+    "build:prod": "webpack -p --env production",
+    "dev-server": "webpack-dev-server",
+    "test": "jest --config=jest.config.json",
+    "start": "node src/app.js"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -16,6 +19,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "express": "^4.17.1",
+    "extract-text-webpack-plugin": "3.0.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.12.0",
     "normalize.css": "7.0.0",
